// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redis-adapter test _createClientBase on CF | AWS-cluster 1`] = `
[
  {
    "defaults": {
      "password": "mock-password",
      "pingInterval": 300000,
      "socket": {
        "host": "clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com",
        "port": 3991,
        "tls": true,
      },
    },
    "rootNodes": [
      {
        "password": "mock-password",
        "pingInterval": 300000,
        "socket": {
          "host": "clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com",
          "port": 3991,
          "tls": true,
        },
      },
    ],
  },
]
`;

exports[`redis-adapter test _createClientBase on CF | AZURE 1`] = `
[
  {
    "password": "mock-password",
    "pingInterval": 300000,
    "socket": {
      "ca": "null",
      "host": "redis-389395bc-9765-4d9a-ba6b-7252c136abab.redis.cache.windows.net",
      "port": 6380,
      "tls": true,
    },
  },
]
`;

exports[`redis-adapter test _createClientBase on CF | GCP 1`] = `
[
  {
    "password": "mock-password",
    "pingInterval": 300000,
    "socket": {
      "host": "10.160.68.75",
      "port": 6378,
      "server_ca": "null",
      "tls": true,
    },
  },
]
`;
